STB-1868 - Added additional functionality